<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13.</string>

    <string name="ok_button">Save book</string>
    <string name="cancel_button">New search</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="add_books">Add Books</string>
    <string name="pref_startScreen">Select start screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="share_text">A must read book: \u0020</string>
    <string name="authors_placeholder">by %1$s</string>


    <string name="about_text">This application gets book information from a Google API.
        All titles, cover images, and author information come from there.
        The original version of this app was built by Sascha Jaschke,
        and fixed by Anastasiya Shevchenko during Udacity Android Nanodegree program. </string>
    <string name="title_activity_barcode_scanning">Barcode Scanning</string>

    <!-- Content descriptions -->
    <string name="book_cover">Book cover</string>
    <string name="cancel_button_desc">Cancel search button</string>
    <string name="save_button_desc">Save book to library and start new search</string>

    <!-- User messages -->
    <string name="not_found">No Book found</string>
    <string name="no_connection">Can not find book without Internet. Check connection and try again</string>
    <string name="bad_server_response">Can not get information for this ISBN, try again later</string>
    <string name="no_books_yet">Your list of books is empty</string>
    <string name="book_saved_message">Book was saved to list. You can start new search.</string>
    <string name="snack_deleted_book">Book is deleted!</string>
    <string name="snack_restored_book">Book is restored!</string>
    <string name="snack_undo">UNDO</string>
    <string name="no_books_found">No books found</string>
</resources>
