<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:id="@+id/ean_container"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="@integer/ean_width"
            android:id="@+id/ean"
            android:saveEnabled="true"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:hint="@string/input_hint"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            android:id="@+id/scan_button"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/book_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:visibility="invisible"
        android:background="@color/book_background"
        android:layout_margin="@dimen/search_result_margin"
        android:padding="10dp"
        android:elevation="3dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:id="@+id/bookCover"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerCrop"
            android:paddingTop="10dp"
            android:visibility="gone"
            android:contentDescription="@string/book_cover" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bookInfo"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/bookCover"
            android:layout_toRightOf="@+id/bookCover">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookSubTitle"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authors"
                android:textSize="@dimen/small_fontsize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="@dimen/small_fontsize" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_below="@+id/bookInfo">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:layout_weight="1"
                android:contentDescription="@string/cancel_button_desc"
                android:id="@+id/delete_button"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_button"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:contentDescription="@string/save_button_desc"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
