<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.ListOfBooks"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal|top"
    android:id="@+id/books_list_container">
    <RelativeLayout
        android:id="@+id/books_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|top">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:src="@drawable/ic_action_search"
            android:contentDescription="@string/search"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:layout_width = "fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText"
            android:inputType="text"
            android:saveEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_toStartOf="@+id/searchButton"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            android:src="@drawable/ic_clear_black_24dp"
            android:contentDescription="@string/search"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/searchButton"
            android:layout_toStartOf="@+id/searchButton"
            android:tint="#5B5B5B"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginTop="5dp"/>

        <ListView
            android:id="@+id/listOfBooks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/searchText"
            android:layout_alignRight="@id/searchButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_toRightOf="@id/searchButton"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_results"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mid_fontsize"
            android:text="@string/no_books_yet" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openAddBookFragment"
            android:text="@string/add_books"/>
    </LinearLayout>
</LinearLayout>
